feat: add filter to activity endpoint